--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,6 +14,7 @@
   <body>
     <h1>Map</h1>
     <div id="map">HEY check console</div>
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
     <script src="/home.js"></script>
   </body>
 </html>
