--- a/styles/styles.css
+++ b/styles/styles.css
@@ -133,11 +133,20 @@ h1 {
   text-align: center;
 }
 #map {
-  margin-left: 20%;
+  margin-left: 5%;
   margin-top: 3%;
-  height: 500px;
-  width: 60%;
+  height: 600px;
+  width: 50%;
+  border-radius: 20px;
 }
 div:hover {
   cursor: pointer !important;
+}
+.info {
+  width: 20%;
+  height: 400px;
+  border-radius: 20px;
+  border: 1px solid black;
+  margin-top: 10%;
+  margin-right: 10%;
 }
