--- a/views/home.ejs
+++ b/views/home.ejs
@@ -12,8 +12,9 @@
     <title>Weather App</title>
   </head>
   <body>
-    <h1>Map</h1>
-    <div id="map">HEY check console</div>
+    <h1>Check The Weather</h1>
+    <div id="map" style="display: inline-block;">HEY check console</div>
+    <span style="float: right;" class="info"></span>
     <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
     <script src="/home.js"></script>
   </body>
