--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,13 +8,24 @@
       href="https://api.mapbox.com/mapbox-gl-js/v3.1.2/mapbox-gl.css"
       rel="stylesheet"
     />
+    <link
+      rel="icon"
+      href="C:\Users\sivar\weather\cloudy.png"
+      type="image/x-icon"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@300&family=Lato&family=Montserrat:ital,wght@1,800&family=Open+Sans:wght@300;400;500&family=Raleway&family=Roboto&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="/styles.css" />
     <title>Weather App</title>
   </head>
   <body>
     <h1>Check The Weather</h1>
-    <div id="map" style="display: inline-block;">HEY check console</div>
-    <span style="float: right;" class="info"></span>
+    <div id="map" style="display: inline-block">HEY check console</div>
+    <span style="float: right" class="info"></span>
     <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
     <script src="/home.js"></script>
   </body>
