--- a/styles/styles.css
+++ b/styles/styles.css
@@ -127,10 +127,18 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+body {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
 h1 {
   font-weight: bolder;
-  font-size: 3rem;
+  font-size: 2em;
   text-align: center;
+  margin-top: 2%;
+  margin-bottom: -0%;
 }
 #map {
   margin-left: 5%;
@@ -143,10 +151,41 @@ div:hover {
   cursor: pointer !important;
 }
 .info {
-  width: 20%;
+  width: 30%;
   height: 400px;
-  border-radius: 20px;
-  border: 1px solid black;
+  background-color: rgb(247, 247, 217);
   margin-top: 10%;
   margin-right: 10%;
+  border-radius: 20px;
+  font-size: medium;
+  font-style: italic;
+}
+.over {
+  overflow-y: scroll;
+}
+.over::-webkit-scrollbar {
+  width: 20px;
+}
+
+/* Track */
+.over::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 3px grey;
+  border-radius: 15px;
+}
+
+/* Handle */
+.over::-webkit-scrollbar-thumb {
+  background: grey;
+  border-radius: 7px;
+}
+
+/* Handle on hover */
+.over::-webkit-scrollbar-thumb:hover {
+  background: grey;
+}
+.margin {
+  margin: 5%;
+}
+.margin-inbetween {
+  margin-bottom: 2%;
 }
